<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:stretchColumns="3"
        tools:context=".SettingsActivity"
        android:id="@+id/settingsActivity">

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/life_story_lines"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="10dp"/>

            <Switch
                android:id="@+id/lifeStoryLines"
                android:textSize="10dp"
                android:text="@string/show_life_story_lines"
                tools:ignore="UseSwitchCompatOrMaterialXml"
                />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/family_tree_lines"
                android:layout_marginRight="10dp"/>

            <Switch
                android:id="@+id/familyTreeLines"
                android:textSize="10dp"
                android:text="@string/show_family_tree_lines"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/spouse_lines"
                android:layout_marginRight="10dp"/>

            <Switch
                android:id="@+id/spouseLines"
                android:textSize="10dp"
                android:text="@string/show_spouse_lines"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/father_s_side"
                android:layout_marginRight="10dp"/>

            <Switch
                android:id="@+id/fathersSide"
                android:textSize="10dp"
                android:text="@string/filter_by_father_s_side"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/mother_s_side"
                android:layout_marginRight="10dp"/>

            <Switch
                android:id="@+id/mothersSide"
                android:textSize="10dp"
                android:text="@string/filter_by_mother_s_side"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/male_events"
                android:layout_marginRight="10dp"/>

            <Switch
                android:id="@+id/maleEvents"
                android:textSize="10dp"
                android:text="@string/filter_events_based_on_gender"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/female_events"
                android:layout_marginRight="10dp"/>

            <Switch
                android:id="@+id/femaleEvents"
                android:textSize="10dp"
                android:text="@string/filter_events_based_on_gender"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/logout" />
        </TableRow>

    </TableLayout>
</ScrollView>